# [build-system]
# requires = ["setuptools >= 61.0"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Zoom_Utils"
keywords = ["zoom", "utils", "utilities", "reports", "zoom reports"]
authors = [
    {name = "Sabari Rajan", email = "iamsabarirajan@gmail.com"}
]
dynamic = [
    "version"
]
description = "Zoom utils"
readme = "README.md"
license = {file = "LICENSE"}
requires_-python = ">=3.8"
dependencies = [
    "selenium",
    "webdriver_manager"
]
long_description = "Zoom utils"
long_description_content_type = "text/markdown"

[tool.hatch.version]
path = "Zoom_Utils/__about__.py"